[project]
name = "event-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sachin Bhat", email = "sachubhat17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.1",
    "numpy>=1.26.0",
    "yfinance-pl>=0.7.2.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
event-impact = "event_impact.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
